added recipes and repo
Refactored recipes for snacks and breakfast, added new recipes, and updated recipe repository saves.